--- a/css/main.css
+++ b/css/main.css
@@ -43,6 +43,11 @@ height:2cm;
 .navbar li{
   padding-left:1.5cm;
 }
+#sale
+{
+  margin-top: 3cm;
+}
+
 /* Make the image fully responsive */
 .carousel-inner img {
   width: 90%;
@@ -58,7 +63,7 @@ height:2cm;
 
 }
 .container-fluid p{
-  margin-top: 1cm;
+  margin-top: 2cm;
 
 }
 .carousel-caption h3{
@@ -97,12 +102,28 @@ footer{
   .cont{
     text-align: center;
   }
+  .embed-responsive iframe{
+    margin-top: 1cm;
+    margin-bottom: 1cm;
+  }
 .modal-body
 {
   font-size: small;
 }
 .btn{
   margin-bottom: 1cm;
+}
+#tabbed
+{
+  margin-top: 1cm;
+  margin-bottom: 1cm;
+}
+#cap2{
+  margin-top: 2cm;
+  margin-bottom: 1cm;
+}
+.container1{
+  background-color: aqua;
 }
 .icons{
   padding-left: 3px;
